# MobileMENetworkCCTweaked

./: README.md
foonext/: .gitignore
foonext/src/app/: page.tsx
foonext/src/app/api/: apis.ts
foonext/src/app/api/update/: route.js
foonext/src/app/storage/: itemComponent.tsx  storageComponent.tsx  types.ts
lua/: testWebSocket.lua  upload.lua  uploadData.lua
lua/lib/: configuration.lua  init.lua  inventory.lua  itemfilter-ccp.lua  logging.lua  monitor.lua  peripheral.lua  redstone.lua  vectors.lua
lua/lib/models/: status-v1.lua
next/: .gitignore  tailwind.config.js
next/src/app/: apis.ts  layout.tsx  page.tsx
next/src/app/api/: apis.ts
next/src/app/api/update/: route.ts
next/src/app/storage/: itemComponent.tsx  searchBar.tsx  storageComponent.tsx  storageSystem.ts  types.ts  useStorageSystem.ts
next/src/components/: itemDisplayComponent.tsx  searchBarComponent.tsx  storageComponent.tsx
next/src/lib/: useStorageSystem.ts
next/src/types/: storage.ts
server/: .gitignore  Docker-compose.yml  Dockerfile  main.py  pyproject.toml
server/items/: 2testData.json  data.json  testData.json  testSaveData.json  testSaveJSONData.json
