[tool.poetry]
name = "sertvoi"
version = "0.1.0"
description = ""
authors = ["strangehoney <vadim.k.2004@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
